add datasetId to get snapshot schema metadata
