# services/analytics-svc/api/swagger/swagger.yaml
@@ -1223,7 +1223,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/Error"
-  /alpdb/{databaseType}/database/{tenant}/metadata/schemasnapshot/schema/{schemaName}:
+  /alpdb/metadata/schemasnapshot:
     x-swagger-router-controller: dbsvc
     get:
       description: Get schema metadata for snapshot
@@ -1231,20 +1231,10 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: databaseType
-          in: path
-          description: Dialect of database (Hana only)
+        - name: datasetId
+          in: query
+          description: ID of dataset
           required: true
-          type: string
-        - name: tenant
-          in: path
-          description: Tenant database name
-          required: true
-          type: string
-        - name: schemaName
-          required: true
-          description: Name of schema to retrieve schema metadata from
-          in: path
           type: string
       responses:
         "200":
